upgrade to PalletOne

--- a/index_zh-cn.html
+++ b/index_zh-cn.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
-	<title>PALLET - 高阶分布式共享账本共治协议</title>
+	<title>PALLETONE - 高阶分布式共享账本共治协议</title>
 	<link href="css/structure.css" rel="stylesheet">
 	<link href="index.css?20180219" rel="stylesheet">
 	<!--link href="mobile.css" rel="stylesheet"-->
@@ -11,18 +11,27 @@
 	<script src="js/general.js" type="text/javascript"></script>
 	<meta property="og:image" content="">
 	<meta property="og:type" content="">
-	<meta property="og:description" content="PALLET - 高阶分布式共享账本共治协议">
+	<meta property="og:description" content="PALLETONE - 高阶分布式共享账本共治协议">
 	<meta property="og:url" content="https://pallet.one">
 	<meta property="og:site_name" content="Pallet.one">
 	<meta name="keywords" content="pallet,PALLET,pallet 协议,分布式,共享帐本,共治协议,跨链,智能合约,protocol,pallet contract,smart contract,blockchain,decentralized exchange,asset management,contracts for ICO">
 	<!-- Copyright (c) 2018 PALLET.one All Rights Reserved -->
 	<meta name="copyright" content="PALLET.one">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?bfd82459b86169e726644f1b748de018";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
 
 	<div id="navbar" class="flex row">
 		<a href="#nav-title" class="flex row center button">
-			<img class="logo" src="img/logo.svg" alt="Pallet logo"><span class="title">PALLET</span>
+			<img class="logo" src="img/logo.svg" alt="Pallet logo"><span class="title">PALLETONE</span>
 		</a>
 		<a href="#nav-intro" class="flex center button"><span>愿景</span></a>
 		<a href="#nav-how" class="flex center button"><span>情境</span></a>
@@ -46,7 +55,7 @@
 			<div class="content">
 				<div id="pallet" class="flex row">
 					<img id="logo" src="img/logo.svg" alt="Pallet logo">
-					<span>PALLET</span>
+					<span>PALLETONE</span>
 				</div>
 				<div class="text-a">
 					<span>高阶分布式共享帐本共治协议</span>
@@ -56,7 +65,7 @@
 				</div>
 				<div class="buttons">
 					<a id="whitepaper" class="button" href="doc/whitepaper_zh-cn.pdf" target="blank">白皮书</a>
-					<a id="onepager" class="button" href="doc/onepager_zh-cn.pdf" target="blank">活页册</a>
+					<!--<a id="onepager" class="button" href="doc/onepager_zh-cn.pdf" target="blank">活页册</a>-->
 				</div>
 			</div>
 		</div>
@@ -72,20 +81,20 @@
 
 		<div id="pallet-block" class="big hex withtext">
 			<div class="text">
-				<span class="title">PALLET</span>
-				<p>Pallet 通过将合约与区块链分离，使跨链交易成为可能。和众多区块链采用的全网共识机制不同，Pallet 通过一份合约对应一群独立执行者的架构，大大提升了可扩展性。</p>
-			</div>
+				<span class="title">高通用</span>
+				<p>底层链在无须做任何要求、约束或限制的情况下，通过PalletOne的适配层即可实现同其他区块链的信息或价值的互换。</p>
+            </div>
 		</div>
 		<div id="security-block" class="hex withtext">
 			<div class="text">
-				<span class="title">安全性</span>
-				<p>Pallet 把奖励和惩罚的机制应用到到权益证明机制中，大大的降低了欺诈行为，确保了合约执行的安全性。</p>
+				<span class="title">高性能</span>
+                <p>通过DAG分布式存储与陪审团共识算法相结合，在存储和计算上均突破了传统区块链的技术限制。</p>
 			</div>
 		</div>
 		<div id="scalability-block" class="hex withtext">
 			<div class="text">
-				<span class="title">可扩展性</span>
-				<p>实现可扩展性的关键是“一个智能合约，一个评审团”。我们使用基于参与者的设计来达成共识。</p>
+				<span class="title">用户友好性</span>
+                <p>PalletOne旨在建立一个完整的智能合约生态，让开发者、用户和“矿工”都能在PalletOne平台中各取所需。</p>
 			</div>
 		</div>
 		<div id="zcash-block" class="hex withtext">
@@ -128,26 +137,24 @@
 		<div id="trans8-block" class="trans hex"></div>
 		<div id="trans9-block" class="trans hex"></div>
 		<div id="trans10-block" class="trans hex"></div>
-		<div class="title"><span>PALLET 使用情境</span></div>
+		<div class="title"><span>PALLETONE 使用场境</span></div>
 
 		<div id="contract-block" class="medium hex withtext">
 			<div class="text">
-				<span class="title">架构 ICO 合约</span>
-				<p>Pallet 是部署 ICO (首次代币发行) 合约的绝佳平台。Pallet 合约可以支持比特币，以太坊或者其他 Pallet 协定支持的数字货币。</p>
+				<span class="title">支持<br>多支付类型的DApp</span>
+                <p>用户使用构建在PalletOne上的DApp时，付费方式更加自由灵活：既可以通过PalletOne上支持的通证，又可以选择BTC、ETH，甚至是几种方式的组合。同时，免除了通过交易所进行兑换的繁琐过程。</p>
 			</div>
 		</div>
 		<div id="exchange-block" class="medium hex withtext">
 			<div class="text">
-				<span class="title">去中心化交易所</span>
-				<p>传统上，人们信赖的中心化交易所来保证交易的安全。</p>
-				<p>但采用 Pallet 智能合约，你可以构建自己的去中心化交易平台，安全的和别人交换比特币，以太坊。</p>
+				<span class="title">跨链支付</span>
+                <p>比特币网络中的用户想享受以太坊中的加密猫的游戏乐趣，但他手头并没有以太币，最可行的解决方法是将自己钱包里的部分比特币兑换成以太币，但这需要经过复杂的交易所操作。用户可以利用PalletOne的跨链功能直接使用比特币支付这笔费用，从而避免繁冗的币种兑换和充值提取等操作。</p>
 			</div>
 		</div>
 		<div id="decentralize-block" class="medium hex withtext">
 			<div class="text">
-				<span class="title">金融衍生品</span>
-				<p>Pallet 支持跨链的资产操作。基于这个特性，开发人员可以在Pallet 
-				contract上构建各种数字货币和区块链的金融工具。</p>
+				<span class="title">金融工具</span>
+                <p>PalletOne是共享投资策略的最佳平台。同时用户可以创建自己的ETF。Pallet中的通证（Token）具有高度的灵活性，任何一个用户都可以利用通证工具设计一个由多币种、股票、债券等多种资产组合而成的通证，从而为全世界的投资者创造更多的机会。此外，Pallet提供了完备的通证定义和通证操作集可以确保安全性</p>
 			</div>
 		</div>
 		<div id="howzcash-block" class="small hex withtext">
@@ -178,34 +185,35 @@
 
 	<div id="feature" class="page">
 		<div id="nav-feature" class="nav"></div>
-		<div class="title"><span>PALLET 特性指南</span></div>
+		<div class="title"><span>PALLETONE 特性指南</span></div>
 		<div class="content flex row">
 			<div class="item">
 				<img src="img/network.svg" alt="Blockchains" class="icon">
-				<div class="title"><span>支持跨链</span></div>
-				<p>Pallet 把智能合约的状态从下方的区块链分离。合约将由协议中的陪审团成员验证，而合约信息则由陪审团保存。</p>
+				<div class="title"><span>多链</span></div>
+                <p>PalletOne智能合约支持多链。通过陪审团共识以及适配层，PalletOne智能合约可同时在不同的区块链上运行，用户在不同的区块链上通过调用一个PalletOne智能合约即可进行通证交易，保证了跨链通证交易的分布式、原子操作和不可篡改的特性。</p>
 			</div>
 			<div class="item">
 				<img src="img/parallel.svg" alt="Parallel" class="icon">
-				<div class="title"><span>高并发</span></div>
-				<p>每个合约都有负责执行该合约的独立陪审团，不同的合约都将独立运作。</p>
+				<div class="title"><span>多任务</span></div>
+				<p>PalletOne智能合约的验证、执行等工作可以由为其专门生成的陪审团完成。陪审团是从候选陪审员中随机选择一定数量的陪审员组成。PalletOne中的智能合约可以通过选择不同陪审团以多任务的方式执行，相较于全网共识的方式，将有效减少网络拥堵。</p>
 			</div>
 			<div class="item">
 				<img src="img/shield.svg" alt="Security" class="icon">
-				<div class="title"><span>安全的架构</span></div>
-				<p>Pallet 共识协定采用权益机制鼓励好的行为，惩罚欺诈。除此之外，Pallet 运用 LLVM 中的编译分析器和运行检查器来保证合约运作的正确性。</p>
+				<div class="title"><span>安全性</span></div>
+                <p>PalletOne的安全性体现在两个方面，一是开发的安全性，二是合约执行的安全性。用户在开发对应场景的时候，调用合约模板，只需很少的步骤即可完成DAPP开发。在合约执行方面，PalletOne VM技术作为智能合约编译和执行的核心工具，可以为智能合约提供安全高效的沙盒运行环境。</p>
 			</div>
 			<div class="item">
 				<img src="img/pencil.svg" alt="Productivity" class="icon">
-				<div class="title"><span>高效安全的合约编写</span></div>
-				<p>Pallet 以 LLVM bitcodes 作为基础，支持各种受欢迎的编程语言。采用熟悉的前端语言大大降低了合约撰写的出错率。</p>
+				<div class="title"><span>多语言 & 多平台</span></div>
+                <p>PalletOne支持多语言。开发者可以使用主流的开发语言（比如Java、C++、JS等）开发智能合约，而不需要专门去学习一门新的合约开发语言，比如像以太坊的Solidity语言。PalletOne支持多语言可以使更多的开发者加入区块链的应用生态。</p>
+                <p>PalletOne VM作为智能合约编译和执行的核心工具, 和底层的操作系统完全解耦，使得PalletOne智能合约适用于windows、Linux、Mac等多种平台类型。</p>
 			</div>
 		</div>
 	</div>
 
 	<div id="timeline" class="page">
 		<div id="nav-timeline" class="nav"></div>
-		<div class="title"><span>PALLET 发展蓝图</span></div>
+		<div class="title"><span>PALLETONE 发展蓝图</span></div>
 		<div class="canvas"></div>
 	</div>
 
@@ -230,14 +238,14 @@
 					<p>前微软中国研发集团副总裁、世界五百强Sun公司中国工程研究院院长.清华大学计算机科学学士、硕士，剑桥大学计算机科学博士，曾任SUN公司Java首席安全架构师，设计了今天为数亿企业和消费者用户所广泛使用的Java平台安全架构。</p>
 				</div>
 			</div>
-            <div class="person">
+            <!--<div class="person">
 				<div class="headpic"><img src="img/team/liao.png"></div>
 				<div class="name"><span class="nowrap">廖博士</span></div>
 				<div class="type"><span>首席科学家</span></div>
 				<div class="description flex column center">
 					<p>斯坦福大学博士，硅谷 22 年经验：Stanford, Intel, Google。共同创设 Google Android compiler, ART Virtual Machine, RenderScript engine，获得 Google 颁发的最高荣誉—创始人奖。多个开源项目的 owner/committer，包括 Gcoin、MCLinker 和 LLVM。在Pallet中，廖博士专注于代码审查及其他科学相关，特别是高难度、高层次的技术性工作（包括：软件框架设计、数学模型等）。</p>
 				</div>
-			</div>
+			</div>-->
 			<div class="clear"></div>
 		</div>
 
@@ -247,7 +255,7 @@
        		<div class="person">
 				<div class="headpic"><img src="img/team/zhupeijiang.jpg"></div>
 				<div class="name"><span>朱佩江</span></div>
-				<div class="type"><span>Pallet 联合创始人</span></div>
+				<div class="type"><span>PalletOne 联合创始人</span></div>
 				<div class="description flex column center">
 					<p>中关村区块链产业联盟秘书长<br>
 1998年毕业于清华大学电子工程系，长期从事网络、视频及区块链技术研究，曾担任某国家级研究机构研究所副所长，教授级高级工程师。</p>
@@ -256,7 +264,7 @@
 			<div class="person">
 				<div class="headpic"><img src="img/team/MatthewJones.png"></div>
 				<div class="name"><span>Matthew Jones</span></div>
-				<div class="type"><span>Pallet联合创始人</span></div>
+				<div class="type"><span>PalletOne联合创始人</span></div>
 				<div class="description flex column center">
 					<p>微软公司 商业策划</p>
                     <p>获得美国德克萨斯州大学奥斯汀分校硕士学位</p>
@@ -265,7 +273,7 @@
 			<div class="person">
 				<div class="headpic"><img src="img/team/kenneth.png"></div>
 				<div class="name"><span>陈振国</span></div>
-				<div class="type"><span>Pallet 团队专家</span></div>
+				<div class="type"><span>PalletOne 团队专家</span></div>
 				<div class="description flex column center">
 					<p>曾任威睿科技联合创始人&CTO <br>TelTel 首席战略官<br>Datamite Technology 联合创始人 &amp; CTO</p>
 					<p>20年产品设计及运营经验</p>
@@ -274,7 +282,7 @@
 			<div class="person">
 				<div class="headpic"><img src="img/team/chenyu.png"></div>
 				<div class="name"><span>陈昱博士</span></div>
-				<div class="type"><span>Pallet 团队专家</span></div>
+				<div class="type"><span>PalletOne 团队专家</span></div>
 				<div class="description flex column center">
 					<p>1998 年获得美国南卡罗来纳大学数学博士, 随后担任美国 Summus Inc 的研究科学家，主要为美国国防研究部门，如 ONR、Sandia National Labs 等开发图像处理和模式识别方面的算法及软件</p>
 				</div>
@@ -283,65 +291,23 @@
 		</div>
       <!-- coco-->
 		<div id="member" class="section flex row center">
-			<div class="person">
-				<div class="headpic"><img src="img/team/Chunwei_Chang.jpg"></div>
-				<div class="name"><span>张钧为</span></div>
-				<div class="type"><span class="nowrap">开发工程师</span></div>
+        	<div class="person">
+				<div class="headpic"><img src="img/team/liujian.png"></div>
+				<div class="name"><span>刘健博士</span></div>
+				<div class="type"><span class="nowrap">PalletOne团队专家</span> </div>
 			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Magrady_Cheng.jpg"></div>
-				<div class="name"><span>元元</span></div>
-				<div class="type"><span>开发工程师</span> <span class="nowrap">曾就职于谷歌</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Bruce_Feynman.jpg"></div>
-				<div class="name"><span>Bruce Feynman</span></div>
-				<div class="type"><span class="nowrap">架构师</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Tony_Hsu.jpg"></div>
-				<div class="name"><span>许伯驹</span></div>
-				<div class="type"><span class="nowrap">开发工程师</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Ben_Huang.jpg"></div>
-				<div class="name"><span>黄邦庭</span></div>
-				<div class="type"><span>Gcoin联合创始人</span> <span class="nowrap">开发工程师</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Minako_Kojima.jpg" alt="Photo of Minako Kojima"></div>
-				<div class="name"><span>Minako Kojima</span></div>
-				<div class="type"><span class="nowrap">Gpool创始人</span> <span class="nowrap">曾就任于谷歌</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/BY_Lin.jpg"></div>
-				<div class="name"><span>林柏宇</span></div>
-				<div class="type"><span>Gcoin</span> <span class="nowrap">联合创始人</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Sitos_Lin.jpg"></div>
-				<div class="name"><span>Dr. Sitos Lin</span></div>
-				<div class="type"><span>Pallet团队专家</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Domen_Su.jpg"></div>
-				<div class="name"><span>苏多门</span></div>
-				<div class="type"><span>开发工程师</span></div>
+        	<div class="person">
+				<div class="headpic"><img src="img/team/zengyi.png"></div>
+				<div class="name"><span>曾毅</span></div>
+				<div class="type"><span class="nowrap">开发工程师</span> </div>
+                <div class="description flex column center">
+					<p>数据库专家，《SQL Server数据库技术大全》作者，长期从事数据库应用、数据仓库、大数据和区块链应用开发和研究。拥有Fabric开发经验。</p>
+				</div>
 			</div>
 			<div class="person">
 				<div class="headpic"><img src="img/team/Cuicui.jpg"></div>
 				<div class="name"><span>王翠翠</span></div>
-				<div class="type"><span class="nowrap">市场运营</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Enran_Zhou.jpg"></div>
-				<div class="name"><span>周恩冉</span></div>
-				<div class="type"><span>架构师</span></div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/liujian.png"></div>
-				<div class="name"><span>刘健博士</span></div>
-				<div class="type"><span class="nowrap">Pallet团队专家</span> </div>
+				<div class="type"><span class="nowrap">开发工程师</span></div>
 			</div>
 			<div class="clear"></div>
 		</div>
@@ -364,14 +330,6 @@
 				<div class="type"><span>Hivelocity 创始人 &amp; CEO</span></div>
 				<div class="description flex column center">
 					<p>20 余年 web 开发、线上市场推广及商务解决方案的工作经验；Hivelocity 创始人 &amp; CEO</p>
-				</div>
-			</div>
-			<div class="person">
-				<div class="headpic"><img src="img/team/Iceburg_Fu.jpg"></div>
-				<div class="name"><span>傅超颖</span></div>
-				<div class="type"><span>博士</span><span class="nowrap">区块链架构师</span></div>
-				<div class="description flex column center">
-					<p>硅谷区块链专家</p>
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -415,7 +373,7 @@
 			<div class="person" style="max-width:80%;">
 				<div class="headpic"><img src="img/team/gezheziben.png"></div>
 				<div class="name"><span>歌者资本</span></div>
-				<div class="type" style="text-align:left;"><span>歌者资本是一家专注于区块链的投资公司，旨在探索基于区块链的破坏性机会。歌者资本的使命是帮助成熟互联网的价值并推动人类协作的新方法。</span></div>
+				<div class="type" style="text-align:left;"><span>歌者资本是一家专注于区块链领域的投资机构，旨在探索基于区块链的颠覆性机会。歌者资本的使命是助力价值互联网发展成熟，推动人类全新协作方式。</span></div>
 				<div class="description flex column center">
 					<p>与互联网相比，区块链所拥有的降维打击能力更直接、更纯粹、更具威力。生命体的本质是个体独立、有序与和谐。区块链下一代互联网本身就是全新数字生命体，每个细胞基本单元都是人机物三元计算。</p>
 				</div>
@@ -431,14 +389,14 @@
 		<div id="nav-faq" class="nav"></div>
 		<div class="title"><span>问答</span></div>
 		<p class="question">与其他跨链解决方案的不同</p>
-		<p class="answer">大多数常见的跨链方案建立在对应于每条链的连接器上，一个连接器可能是一条针对相同共识机制跨链连接的公有链。与之对应的是 Pallet 的跨链方式，Pallet 通过一个轻量型，与区块链分离的高阶合约执行层连接不同的区块链。 而共识则是由被选出执行合约的陪审团成员达成。负责执行合约的陪审团保有合约的状态。</p>
-		<p class="question">Pallet 支持哪些区块链？</p>
+		<p class="answer">大多数常见的跨链方案建立在对应于每条链的连接器上，一个连接器可能是一条针对相同共识机制跨链连接的公有链。与之对应的是 PalletOne 的跨链方式，PalletOne 通过一个轻量型，与区块链分离的高阶合约执行层连接不同的区块链。 而共识则是由被选出执行合约的陪审团成员达成。负责执行合约的陪审团保有合约的状态。</p>
+		<p class="question">PalletOne 支持哪些区块链？</p>
 		<p class="answer">很多的区块链项目都是从比特币和以太坊分叉出来的。因此，我们将会优先支持比特币和以太坊，之后会很快的支持其他区块链。我们也同样欢迎社区的开发者加入我们，共同开发和连接不同的区块链。</p>
 		<!--p class="question">在 Pallet 中如何防止共谋？</p>
 		<p class="answer">我们优先保护合约的参与者，防止作恶的陪审团成员损害他们的利益。最初，每个陪审团成员都会向仲裁合约上传押金。如果参与者质疑合约执行的结果，他们可以呼叫仲裁合约来判定结果，仲裁合约将由大陪审团执行。如果判定结果无效，执行该合约陪审团成员的押金将会被没收作为合约参与者的补偿。</p-->
 		<p class="question">什么是合约的分离？</p>
-		<p class="answer">合约分离意味着合约的执行会从下方的区块链分离开而由 Pallet 执行。合约经过执行验证后，合约的信息将会存储到陪审团成员内部和/或合约涉及的区块链中。</p>
-		<p class="question">是否有展示 Pallet 操作的影片？</p>
+		<p class="answer">合约分离意味着合约的执行会从下方的区块链分离开而由 PalletOne 执行。合约经过执行验证后，合约的信息将会存储到陪审团成员内部和/或合约涉及的区块链中。</p>
+		<p class="question">是否有展示 PalletOne 操作的影片？</p>
 		<p class="answer">
 			可以观看下方非正式版的解释影片<br> <br>
 			<video controls muted preload="none">
@@ -481,7 +439,7 @@
 	</div>
 
 	<div id="notice"><div class="attention">
-		<p>Pallet 仅通过 https://pallet.one、@pallet.one 邮箱与在此公告的社群媒体帐号发布官方信息，其他可能为虚假信息。<!--<a href="yanzheng_zh-cn.html" target="_blank" style="padding:0 4px; text-decoration:underline; color:#000;">地址验证</a>--></p>
+		<p>PalletOne 仅通过 http://pallet.one、@pallet.one 邮箱与在此公告的社群媒体帐号发布官方信息，其他可能为虚假信息。<!-- <a href="yanzheng_zh-cn.html" target="_blank" style="padding:0 4px; text-decoration:underline; color:#000;">地址验证</a> --></p>
 	</div></div>
 
 	<div id="ie" class="fullscreen">
@@ -498,14 +456,14 @@
 	</div>
 
 	<script src="js/load.js" type="text/javascript"></script>
-	<script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=UA-114657870-1"></script>
+	<!--<script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=UA-114657870-1"></script>
 	<script type="text/javascript">
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
 		gtag('config', 'UA-114657870-1');
-	</script>
+	</script>-->
 	<script src="js/hexagon.js" type="text/javascript"></script>
 	<script src="js/timeline.js" type="text/javascript"></script>
 	<script src="index.js" type="text/javascript"></script>
