move pc main pages to root folder

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ function browserRedirect() {
     if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){  
         //window.location.href="../pc/index.html";  
     } else {  
-        window.location.href="../wap/index.htm";  
+        window.location.href="wap/index.htm";  
     }  
 }  
 browserRedirect(); 
