--- a/index.html
+++ b/index.html
@@ -326,8 +326,7 @@ browserRedirect();
                 
                 <p  style="padding:7px 20px 20px">President of Mozilla company，Former 
 vice president of  Microsoft China R & D 
-group，president of China Engineering Research Institute of Sun. Got a bachel
-or’s degree and a master’s degree in computer science of Tsinghua University, Ph. D. of computer science of University of Cambridge.</p>
+group，president of China Engineering Research Institute of Sun. Got a bachelor’s degree and a master’s degree in computer science of Tsinghua University, Ph. D. of computer science of University of Cambridge.</p>
             </div>
         </div>
     </div>
