add baidu tongji coce and fix some bugs.

--- a/wap/index.html
+++ b/wap/index.html
@@ -29,6 +29,15 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css"  rel="stylesheet">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?bfd82459b86169e726644f1b748de018";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>        
 </head>
 <body id="page-top">
 <div class="navbar-wrapper">
