--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="keywords" content="pallet,palletone,crosschain,blockchain,DAG,Jury">
-<title>Palletone</title>
+<title>PalletOne</title>
 <link rel="stylesheet" type="text/css" href="css/base.css" />
 <link rel="stylesheet" type="text/css" href="css/animate.min.css" />
 <link href="css/video-js.css" rel="stylesheet">
@@ -29,7 +29,7 @@ function browserRedirect() {
     if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){  
         //window.location.href="../pc/index.html";  
     } else {  
-        window.location.href="wap/index.htm";  
+        window.location.href="wap/index.html";  
     }  
 }  
 browserRedirect(); 
