--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -464,7 +464,7 @@ ui,#qq{display:inline}
         <!-- <source src="http://jq22com.qiniudn.com/jq22-sp.mp4" type="video/mp4"> -->
         <!-- <p class="vjs-no-js"> To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a> </p> -->
       <!-- </video> -->
-        <!-- <!--<img src="images/icon_radio.png" class="icon-begin" />--> -->
+        <!-- <!--<img src="images/icon_radio.png" class="icon-begin" />--> 
     <!-- </div> -->
 <!-- </div> -->
 <div class="g-title">联系方式</div>
