--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -458,7 +458,7 @@ ui,#qq{display:inline}
 </div>
 <!-- <div class="wrap1200"> -->
 	<!-- <div class="vadio"> -->
-    	<!-- <!--<img src="images/radio.jpg" />--> -->
+    	<!-- <!--<img src="images/radio.jpg" />--> 
         <!-- <video id="my-video" class="video-js" controls preload="auto" width="791" height="425" -->
 		  <!-- poster="images/radio.jpg" data-setup="{}"> -->
         <!-- <source src="http://jq22com.qiniudn.com/jq22-sp.mp4" type="video/mp4"> -->
