--- a/index.html
+++ b/index.html
@@ -478,13 +478,13 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
 
 <!-- <div class="wrap1200"> -->
 	<!-- <div class="vadio"> -->
-    	<!-- <!--<img src="images/radio.jpg" />--> -->
+    	<!-- <!--<img src="images/radio.jpg" />--> 
         <!-- <video id="my-video" class="video-js" controls preload="auto" width="791" height="425" -->
 		  <!-- poster="images/radio.jpg" data-setup="{}"> -->
         <!-- <source src="http://jq22com.qiniudn.com/jq22-sp.mp4" type="video/mp4"> -->
         <!-- <p class="vjs-no-js"> To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a> </p> -->
       <!-- </video> -->
-        <!-- <!--<img src="images/icon_radio.png" class="icon-begin" />--> -->
+        <!-- <!--<img src="images/icon_radio.png" class="icon-begin" />--> 
     <!-- </div> -->
 <!-- </div> -->
 <div class="g-title">Contact us</div>
