--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -49,7 +49,7 @@ ui,#qq{display:inline}
     <div class="banner">
         <div class="wrap1200">
             <div class="title wow zoomIn animated"><span class="txt">高阶分布式共享帐本共治协议</span></div>
-            <div class="small-title wow zoomIn animated" style="color:blue">区块链世界IP协议 高性能分布式账本<br><a class="btn-white-paper" href=""  style="float:left; margin-right:30px;">白皮书</a><a class="btn-white-paper" href=""  style="float:left">黄皮书</a></div>
+            <div class="small-title wow zoomIn animated" style="color:blue">区块链世界IP协议 高性能分布式账本<br><a class="btn-white-paper" href="doc/PalletOne_whitepaper_zh-cn.pdf"  style="float:left; margin-right:30px;">白皮书</a><a class="btn-white-paper" href="doc/PalletOne_whitepaper_zh-cn.pdf"  style="float:left">黄皮书</a></div>
         </div>
     </div>
     <!--vision-->
@@ -481,16 +481,16 @@ ui,#qq{display:inline}
 						<a href="#"><img src="images/icon-bird.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="#"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
-						<a href="#"><img src="images/telegram.png"  width="30" height="30"></a>
+						<a href="https://t.me/palletchinese"><img src="images/telegram.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq">
 						<a href="#"><img src="images/wechat.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
-						<a href="#"><img src="images/github.png"  width="30" height="30"></a>
+						<a href="https://github.com/PalletOne"><img src="images/github.png"  width="30" height="30"></a>
                     </li>
                 </ul>
             </div>
