--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ browserRedirect();
         <div class="wrap1200">
             <div class="title wow zoomIn animated"><br><span class="txt">Protocol for 
 			Abstract-Level Ledger Ecosystem</span></div>
-            <div class="small-title wow zoomIn animated" style="color:blue">IP Protocol for Future Internet of Values<br><a class="btn-white-paper" href="" style="float:left; margin-right:30px;">White Paper</a><a class="btn-white-paper" href=""  style="float:left">Yellow Paper</a></div>
+            <div class="small-title wow zoomIn animated" style="color:blue">IP Protocol for Future Internet of Values<br><a class="btn-white-paper" href="doc/PalletOne_whitepaper_zh-cn.pdf" style="float:left; margin-right:30px;">White Paper</a><a class="btn-white-paper" href="doc/PalletOne_yellowpaper_zh-cn.pdf"  style="float:left">Yellow Paper</a></div>
         </div>
     </div>
     <!--vision-->
@@ -501,16 +501,16 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
 						<a href="#"><img src="images/icon-bird.png" width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="#"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
-						<a href="#"><img src="images/telegram.png"  width="30" height="30"></a>
+						<a href="https://t.me/palletchinese"><img src="images/telegram.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq">
 						<a href="#"><img src="images/wechat.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
-						<a href="#"><img src="images/github.png"  width="30" height="30"></a>
+						<a href="https://github.com/PalletOne"><img src="images/github.png"  width="30" height="30"></a>
                     </li>
                 </ul>
             </div>
