--- a/wap/index.html
+++ b/wap/index.html
@@ -68,7 +68,7 @@
     <!--banner-->
     <div class="banner container">
         <div class="title wow zoomIn"><span class="txt">Protocol for Abstract-Level <span style="color:#2840af;">Ledger Ecosystem</span></span></div>
-        <div class="small-title wow zoomIn">IP Protocol for Future Internet of Values<br><a class="btn-white-paper" href="" style="margin-right:30px;" >White Paper</a><a class="btn-white-paper" href="">Yellow Paper</a></div>
+        <div class="small-title wow zoomIn">IP Protocol for Future Internet of Values<br><a class="btn-white-paper" href="../doc/PalletOne_whitepaper_zh-cn.pdf" style="margin-right:30px;" >White Paper</a><a class="btn-white-paper" href="../doc/PalletOne_whitepaper_zh-cn.pdf">Yellow Paper</a></div>
     </div>
     <!--vision-->
     <section class="features" id="Vision">
@@ -580,13 +580,13 @@ or’s degree and a master’s degree in computer science of Tsinghua University
                 <ul class="list-inline pull-right">
                     <li><a href="#"><img src="images/icon-bird.png"></a>
                     </li>
-                    <li><a href="#"><img src="images/icon-f.png"></a>
+                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"></a>
                     </li>
-                    <li><a href="#"><img src="images/telegram.png"></a>
+                    <li><a href="https://t.me/palletchinese"><img src="images/telegram.png"></a>
                     </li>
 					<li><a href="#"><img src="images/wechat.png"></a>
                     </li>
-					<li><a href="#"><img src="images/github.png"></a>
+					<li><a href="https://github.com/PalletOne"><img src="images/github.png"></a>
                     </li>
                 </ul>
             </div>
