--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -68,7 +68,7 @@
     <!--banner-->
     <div class="banner container">
         <div class="title wow zoomIn"><span class="txt">高分布式共享帐本共治协议</span></div>
-        <div class="small-title wow zoomIn" style="color:blue">区块链世界IP协议高性能分布式账本<br><a class="btn-white-paper" href=""  style="margin-right:30px;">白皮书</a><a class="btn-white-paper" href="" >黄皮书</a></div>
+        <div class="small-title wow zoomIn" style="color:blue">区块链世界IP协议高性能分布式账本<br><a class="btn-white-paper" href="../doc/PalletOne_whitepaper_zh-cn.pdf"  style="margin-right:30px;">白皮书</a><a class="btn-white-paper" href="../doc/PalletOne_yellowpaper_zh-cn.pdf" >黄皮书</a></div>
     </div>
     <!--vision-->
     <section class="features" id="Vision">
@@ -572,13 +572,13 @@
                 <ul class="list-inline pull-right">
                     <li><a href="#"><img src="images/icon-bird.png"></a>
                     </li>
-                    <li><a href="#"><img src="images/icon-f.png"></a>
+                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"></a>
                     </li>
-                    <li><a href="#"><img src="images/telegram.png"></a>
+                    <li><a href="https://t.me/palletchinese"><img src="images/telegram.png"></a>
                     </li>
 					<li><a href="#"><img src="images/wechat.png"></a>
                     </li>
-					<li><a href="#"><img src="images/github.png"></a>
+					<li><a href="https://github.com/PalletOne"><img src="images/github.png"></a>
                     </li>
                 </ul>
             </div>
