--- a/wap/index.html
+++ b/wap/index.html
@@ -496,7 +496,7 @@ or’s degree and a master’s degree in computer science of Tsinghua University
         <div class="row">
             <div class="col-lg-12 text-center wow zoomIn">
                 <h1 class="g-title">
-                   Investment funds<br>
+                   Investment Funds<br>
                 </h1>
                 <div class="testimonials-text">
                     <img src="images/funds.png">
