--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@ browserRedirect();
            <ul>
                 <li class="time time1 wow fadeIn animated">
                     <h2>2015 Oct</h2>
-                    <p>vChain (internal project) Con-cept born</p>
+                    <p>vChain (internal project) Concept born</p>
                     <img class="icon-b" src="images/icon-b5.png">
                     <img class="arrow" src="images/arrow-right.png">
                 </li>
                 <li class="time time2">
                     <h2>2016 Apr</h2>
-                    <p>Release illustration about vC-hain</p>
+                    <p>Release illustration about vChain</p>
                     <img class="icon-b" src="images/icon-b4.png">
                     <img class="arrow" src="images/arrow-left.png">
                 </li>
@@ -233,7 +233,7 @@ browserRedirect();
                 </li>
                 <li class="time time5">
                     <h2>2017 May</h2>
-                    <p>Modify vChain EVM from Eth-ereum EVM</p>
+                    <p>Modify vChain EVM from Ethereum EVM</p>
                     <img class="icon-b" src="images/icon-b3.png">
                     <img class="arrow" src="images/arrow-right.png">
                 </li>
@@ -257,13 +257,13 @@ browserRedirect();
                 </li>
                 <li class="time time9">
                     <h2>2018 Mar</h2>
-                    <p>Release PalletOne White Pa-per</p>
+                    <p>Release PalletOne White Paper</p>
                     <img class="icon-b" src="images/icon-b2.png">
                     <img class="arrow" src="images/arrow-right.png">
                 </li>
                 <li class="time time10">
                     <h2>2018 May</h2>
-                    <p>Release PalletOne Yellow P-aper</p>
+                    <p>Release PalletOne Yellow Paper</p>
                     <img class="icon-b" src="images/icon-b2.png">
                     <img class="arrow" src="images/arrow-left.png">
                 </li>
@@ -275,7 +275,7 @@ browserRedirect();
                 </li>
                 <li class="time time12">
                     <h2>2018 Q3</h2>
-                    <p>Publish Bitcoin-supported Pa-lletOne Protocol</p>
+                    <p>Publish Bitcoin-supported PalletOne Protocol</p>
                     <img class="icon-b" src="images/icon-b2.png">
                     <img class="arrow" src="images/arrow-left.png">
                 </li>
