--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -68,7 +68,7 @@
     <!--banner-->
     <div class="banner container">
         <div class="title wow zoomIn"><span class="txt">高分布式共享帐本共治协议</span></div>
-        <div class="small-title wow zoomIn" style="color:blue">区块链世界IP协议高性能分布式账本<br><a class="btn-white-paper" href="../doc/PalletOne_whitepaper_zh-cn.pdf"  style="margin-right:30px;">白皮书</a><a class="btn-white-paper" href="../doc/PalletOne_yellowpaper_zh-cn.pdf" >黄皮书</a></div>
+        <div class="small-title wow zoomIn" style="color:blue">区块链世界IP协议 高性能分布式账本<br><a class="btn-white-paper" href="../doc/PalletOne_whitepaper_zh-cn.pdf"  style="margin-right:30px;">白皮书</a><a class="btn-white-paper" href="../doc/PalletOne_yellowpaper_zh-cn.pdf" >黄皮书</a></div>
     </div>
     <!--vision-->
     <section class="features" id="Vision">
@@ -91,7 +91,7 @@
 			<div class="col-lg-5 features-text">
                 <img src="images/icon_vision1.png" class="fa big-icon pull-left" />
                 <h2>高通用 </h2>
-                <p>DApp（分散应用程序）可以同时部署在不同的链上，并且不受底层链的限制。</p>
+                <p>DApp可以同时部署在不同的链上，并且不受底层链的限制。</p>
             </div>
             <div class="col-lg-5 col-lg-offset-2 features-text">
                 <img src="images/icon_vision2.png" class="fa big-icon pull-left" />
