--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -564,16 +564,16 @@
         <div class="row">
             <div class="col-lg-12">
                 <form role="form">
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <input type="text" class="form-control inp-text" id="name" placeholder="Name">
-                    </div>
+                    </div> -->
                     <div class="form-group">
-                        <input type="text" class="form-control inp-text" id="" placeholder="Email">
+                        <span class="sps"><img src="../images/send_bg_ioc.jpg"></span><input type="text" class="form-control inp-text" id="" placeholder="contact@pallet.one" style="text-indent: 45px;">
                     </div>
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <textarea class="form-control inp-text" rows="3" placeholder="Your Message"></textarea>
                     </div>
-                    <button type="submit" class="btn  btn-sign">发送</button>
+                    <button type="submit" class="btn  btn-sign">发送</button>-->
                 </form>
             </div>
         </div>
