Update user resume.

--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -395,7 +395,7 @@
                     <div class="team-member">
                         <img src="images/liujian.png"  class="img-responsive img-circle img-small" alt="">
                         <h4>刘健博士<br><span class="blue-txt">PalletOne团队专家</span></h4>
-						<p class="text-left">国防科技大学博士，长期从事操作系统，分布式计算，超级计算机等方面开发和研究</p>
+						<p class="text-left">国防科技大学博士，长期从事操作系统，分布式计算，超级计算机等方面开发和研究。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 wow fadeInLeft swiper-slide">
@@ -403,7 +403,7 @@
                         <img src="images/zengyi.png"  class="img-responsive img-circle img-small" alt="">
                         <h4>曾毅<br><span class="blue-txt">PalletOne架构师</span></h4>
                         
-                        <p class="text-left">数据库专家，《SQL Server数据库技术大全》作者，长期从事数据库应用、数据仓库、大数据和区块链应用开发和研究。拥有Fabric开发经验。</p>
+                        <p class="text-left">数据库专家，《SQL Server数据库技术大全》作者，长期从事数据库应用、数据仓库、大数据和区块链应用开发和研，精通比特币和超级账本的开发，擅长区块链底层架构设计。</p>
                     </div>
                 </div>
                 <div class="col-sm-4 wow fadeInLeft swiper-slide">
