--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -75,7 +75,7 @@
                         <li><a class="page-scroll" href="#Timeline">蓝图</a></li>
                         <li><a class="page-scroll" href="#Team">团队</a></li>
                         <li><a class="page-scroll" href="#QA">问答 </a></li>
-                        <li><a class="page-scroll" href="index.htm">English </a></li>
+                        <li><a class="page-scroll" href="index.html">English </a></li>
                     </ul>
                 </div>
             </div>
