--- a/index.html
+++ b/index.html
@@ -728,9 +728,9 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
 </div>
 <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
 <script src="js/wow.min.js" ></script>
-<script language="javascript" type="text/javascript" src="js/swfobject.js"></script>
+<!--<script language="javascript" type="text/javascript" src="js/swfobject.js"></script>
 <script src="js/video.min.js"></script> 
-<script src="http://vjs.zencdn.net/5.19/lang/zh-CN.js"></script>
+ <script src="http://vjs.zencdn.net/5.19/lang/zh-CN.js"></script> -->
 <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
