--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -752,9 +752,9 @@ ui,#qq{display:inline}
 </div>
 <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
 <script src="js/wow.min.js" ></script>
-<script language="javascript" type="text/javascript" src="js/swfobject.js"></script>
+<!-- <script language="javascript" type="text/javascript" src="js/swfobject.js"></script>
 <script src="js/video.min.js"></script> 
-<script src="http://vjs.zencdn.net/5.19/lang/zh-CN.js"></script>
+<script src="http://vjs.zencdn.net/5.19/lang/zh-CN.js"></script> -->
 <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
